--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -2491,6 +2491,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <span style='color:Purple'> 1. For the geostrophic velocity anomaly fields (u' and v') calculate M, N, and K by averaging over the whole timeseries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <span style='color:Purple'> 2. Make vector plots of the a) Zonal Eddy Momentum Flux and b) Meridional Eddy Momentum Flux. (The two columns of tau)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <span style='color:Purple'> 3. Calculate and plot K, gamma_m, and phi_m globally"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <span style='color:Purple'> 4. Make some zoomed in plots of K, gamma_m, and phi_m in the a) gulf stream, b) kuroshio, c) equator, d) ACC. Try to ascertain whether the eddy forcing is accelerating or decelerating these jets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
